# acm2

./: .gitignore  9-2-todo.md  ARCHITECTURE.md  BACKEND_MASTER_DB_PLAN.md  FOREVER-README-INSTALL.MD  FUCKING-LIVE-STAT-9-2.MD  FUCKING-LIVE-STATS-2.MD  FUCKING-LIVE-STATS-3.MD  FUCKING-LIVE-STATS-4.MD  FUCKING-LIVE-STATS-5.MD  FUCKING-LIVE-STATS-6.MD  GITHUB_APP_PLAN.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_REPORT_ACM_APP_NOT_LOADING.md  LIST-OF-PROBLEMS.MD  LIVE_STATS_TEST_REPORT.md  LLM_README.md  MULTI_DOC_PIPELINE_PLAN.md  PER_USER_DB_IMPLEMENTATION_PLAN.md  PHASE2_SUMMARY.md  README.md  REFACTOR_ISSUES.md  SSH_AND_TERMINAL_GUIDE.txt  START-BACKEND.ps1  TABS_INSIDE_SECTIONS_REFACTOR.md  UUID_USER_IDENTITY_PLAN_V2.md  WEB_TESTING_INSTRUCTIONS.md  WORKFLOW_ROOT_CAUSE_REPORT.md  add_backend_url.py  build_ui_frontend.py  build_ui_npx.py  build_ui_proper.py  check_acm2_status.py  check_api_key_pass.py  check_build.py  check_commit.py  check_db.py  check_deleted_files.py  check_git_history.py  check_git_remote.py  (+42 more)
acm2/: .gitignore  9-1-todo.md  ACM2_LOGGING_REGRESSION_REPORT.md  COMPLETED_FIX_FPF_LOGGING.md  COMPLETED_REMOVE_GLOBAL_LOGGING.md  FALLBACK_ELIMINATION_PLAN.md  FUCKING-LIVE-STAT-11.MD  FUCKING-LIVE-STAT-9-1.MD  FUCKING-LIVE-STATS-14.MD  FUCKING-LIVE-STATS-7.MD  FUCKING-LIVE-STATS.MD  GUI_SETTINGS_RESPECT_VERIFICATION.md  LIVE_STATS_DEBUG_REPORT.md  MANIFEST.in  Makefile  PLAN_REMOVE_GLOBAL_LOGGING.md  POST_COMBINE_FIX_VERIFICATION.md  PRESETS_NOT_LOADING_REPORT.md  README.md  SERVER-NO-STOP-RULES.md  add_columns.py  check_artifacts.py  check_content.py  check_db.py  check_db_schema.py  check_docs.py  check_error.py  check_gen_instructions.py  check_latest_run.py  check_preset_combine.py  check_preset_config.py  check_preset_db.py  check_preset_overrides.py  check_run.py  check_run_config.py  check_run_db.py  check_run_results.py  check_run_status.py  check_run_status_specific.py  check_run_tasks.py  (+54 more)
acm2/app/: __init__.py  config.py  main.py
acm2/data/: seed.db  user_10.db-shm  user_11.db-shm  user_12.db-shm  user_13.db-shm  user_13.db-wal  user_14.db-shm  user_14.db-wal  user_6.db-shm  user_7.db-shm  user_7.db-wal
acm2/docs/: ACM1_CONFIG_REFERENCE.md  ACM2_CRITICAL_ISSUES.md  ACM2_DEVELOPMENT_STEPS.md  ACM2_RATE_LIMITING_PLAN.md  ACM2_STEP0_ONE_PAGER.md  ACM2_STEP12_CLI.md  ACM2_STEP13_DEPLOYMENT.md  ACM2_STEP16_GPTR_ADAPTER.md  ACM2_STEP1_4_INITIAL_HTTP_JSON_API.md  ACM2_STEP1_5_STORAGE_AND_DATABASE.md  ACM2_STEP2_1_BACKEND_PROJECT_SETUP.md  ACM2_STEP2_7B_RUN_DOCUMENT_API_LAYER.md  ACM2_STEP2_8_STORAGE_PROVIDER.md  (+13 more)
(+369 files in other folders)
